[package]
name = "use_case"
version = "0.1.0"
authors = ["Ops Fox <opsfox245@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alchemy_framework = { path = "../alchemy_framework" }
log = "0.4"
simplelog = "0.10.0"
winit = "0.24.0"
wgpu = "0.7"